# news-ai

./: .dockerignore  .gitignore  Dockerfile  main.py  mkdocs.yml  news-ai.json  news.db  pyproject.toml
docs/: api.md  index.md  technical.md
docs/slides/: presentation.md
expo/: App.js  app.json  eas.json  package.json  start_tunnel.sh
expo/assets/: README.txt
static/css/: styles.css
static/js/: app.js
templates/: index.html  presentation.html
