[project]
name = "news-ai"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.10"
dependencies = [
    "apscheduler>=3.11.2",
    "fastapi>=0.127.0",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.1",
    "mkdocs-revealjs>=0.0.6",
    "python-dotenv>=1.2.1",
    "pytz>=2025.2",
    "sqlalchemy>=2.0.45",
    "uvicorn>=0.40.0",
]
